update new data

--- a/notebooks/crawl_data_vcb.ipynb
+++ b/notebooks/crawl_data_vcb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,42 @@
       "📅 Đã crawl xong dữ liệu tháng 02/2022\n",
       "📅 Đã crawl xong dữ liệu tháng 03/2022\n",
       "📅 Đã crawl xong dữ liệu tháng 04/2022\n",
-      "📅 Đã crawl xong dữ liệu tháng 05/2022\n"
+      "📅 Đã crawl xong dữ liệu tháng 05/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 06/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 07/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 08/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 09/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 10/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 11/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 12/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 01/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 02/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 03/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 04/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 05/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 06/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 07/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 08/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 09/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 10/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 11/2023\n",
+      "📅 Đã crawl xong dữ liệu tháng 12/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 01/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 02/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 03/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 04/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 05/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 06/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 07/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 08/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 09/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 10/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 11/2024\n",
+      "📅 Đã crawl xong dữ liệu tháng 12/2025\n",
+      "📅 Đã crawl xong dữ liệu tháng 01/2025\n",
+      "📅 Đã crawl xong dữ liệu tháng 02/2025\n",
+      "📅 Đã crawl xong dữ liệu tháng 03/2025\n",
+      "✅ Done! Saved to ../data/raw/EUR_VND_Exchange_Rate.csv.csv\n"
      ]
     }
    ],
@@ -119,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
