--- a/notebooks/randomforest.ipynb
+++ b/notebooks/randomforest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -105,124 +105,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-05-01</th>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>25993.859375</td>\n",
-       "      <td>26085.720703</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26054.089844</td>\n",
-       "      <td>26092.029297</td>\n",
+       "      <th>2025-04-07</th>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29245.750000</td>\n",
+       "      <td>28437.330078</td>\n",
+       "      <td>28516.390625</td>\n",
+       "      <td>28459.009766</td>\n",
+       "      <td>28362.949219</td>\n",
+       "      <td>28362.949219</td>\n",
        "      <td>...</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26147.939453</td>\n",
-       "      <td>26190.960938</td>\n",
-       "      <td>26121.769531</td>\n",
-       "      <td>26018.949219</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>26506.550781</td>\n",
-       "      <td>26506.550781</td>\n",
+       "      <td>28560.130859</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28507.570312</td>\n",
+       "      <td>28509.990234</td>\n",
+       "      <td>28534.269531</td>\n",
+       "      <td>28427.619141</td>\n",
+       "      <td>28468.929688</td>\n",
+       "      <td>28468.929688</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-02</th>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>25993.859375</td>\n",
-       "      <td>26085.720703</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26054.089844</td>\n",
+       "      <th>2025-04-08</th>\n",
+       "      <td>29215.210938</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29245.750000</td>\n",
+       "      <td>28437.330078</td>\n",
+       "      <td>28516.390625</td>\n",
+       "      <td>28459.009766</td>\n",
+       "      <td>28362.949219</td>\n",
        "      <td>...</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26147.939453</td>\n",
-       "      <td>26190.960938</td>\n",
-       "      <td>26121.769531</td>\n",
-       "      <td>26018.949219</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>26506.550781</td>\n",
+       "      <td>28730.009766</td>\n",
+       "      <td>28560.130859</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28507.570312</td>\n",
+       "      <td>28509.990234</td>\n",
+       "      <td>28534.269531</td>\n",
+       "      <td>28427.619141</td>\n",
+       "      <td>28468.929688</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-03</th>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>25993.859375</td>\n",
-       "      <td>26085.720703</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26034.900391</td>\n",
+       "      <th>2025-04-09</th>\n",
+       "      <td>29443.519531</td>\n",
+       "      <td>29215.210938</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29245.750000</td>\n",
+       "      <td>28437.330078</td>\n",
+       "      <td>28516.390625</td>\n",
+       "      <td>28459.009766</td>\n",
        "      <td>...</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26147.939453</td>\n",
-       "      <td>26190.960938</td>\n",
-       "      <td>26121.769531</td>\n",
-       "      <td>26018.949219</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>25936.230469</td>\n",
+       "      <td>28707.859375</td>\n",
+       "      <td>28730.009766</td>\n",
+       "      <td>28560.130859</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28507.570312</td>\n",
+       "      <td>28509.990234</td>\n",
+       "      <td>28534.269531</td>\n",
+       "      <td>28427.619141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-04</th>\n",
-       "      <td>26230.000000</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>25993.859375</td>\n",
-       "      <td>26085.720703</td>\n",
-       "      <td>26034.900391</td>\n",
-       "      <td>26034.900391</td>\n",
+       "      <th>2025-04-10</th>\n",
+       "      <td>29178.759766</td>\n",
+       "      <td>29443.519531</td>\n",
+       "      <td>29215.210938</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29245.750000</td>\n",
+       "      <td>28437.330078</td>\n",
+       "      <td>28516.390625</td>\n",
        "      <td>...</td>\n",
-       "      <td>26238.789062</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26147.939453</td>\n",
-       "      <td>26190.960938</td>\n",
-       "      <td>26121.769531</td>\n",
-       "      <td>26018.949219</td>\n",
-       "      <td>25936.230469</td>\n",
-       "      <td>25936.230469</td>\n",
+       "      <td>28663.919922</td>\n",
+       "      <td>28707.859375</td>\n",
+       "      <td>28730.009766</td>\n",
+       "      <td>28560.130859</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28507.570312</td>\n",
+       "      <td>28509.990234</td>\n",
+       "      <td>28534.269531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-05</th>\n",
-       "      <td>26166.019531</td>\n",
-       "      <td>26230.000000</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>26024.470703</td>\n",
-       "      <td>25993.859375</td>\n",
-       "      <td>26085.720703</td>\n",
-       "      <td>26034.900391</td>\n",
+       "      <th>2025-04-11</th>\n",
+       "      <td>29775.689453</td>\n",
+       "      <td>29178.759766</td>\n",
+       "      <td>29443.519531</td>\n",
+       "      <td>29215.210938</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29106.519531</td>\n",
+       "      <td>29245.750000</td>\n",
+       "      <td>28437.330078</td>\n",
        "      <td>...</td>\n",
-       "      <td>26253.960938</td>\n",
-       "      <td>26238.789062</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26261.199219</td>\n",
-       "      <td>26147.939453</td>\n",
-       "      <td>26190.960938</td>\n",
-       "      <td>26121.769531</td>\n",
-       "      <td>26018.949219</td>\n",
-       "      <td>25936.230469</td>\n",
+       "      <td>28481.259766</td>\n",
+       "      <td>28663.919922</td>\n",
+       "      <td>28707.859375</td>\n",
+       "      <td>28730.009766</td>\n",
+       "      <td>28560.130859</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28438.750000</td>\n",
+       "      <td>28507.570312</td>\n",
+       "      <td>28509.990234</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -232,55 +232,55 @@
       "text/plain": [
        "                    Sell         lag_1         lag_2         lag_3  \\\n",
        "Date                                                                 \n",
-       "2020-05-01  26024.470703  26024.470703  26024.470703  25993.859375   \n",
-       "2020-05-02  26024.470703  26024.470703  26024.470703  26024.470703   \n",
-       "2020-05-03  26024.470703  26024.470703  26024.470703  26024.470703   \n",
-       "2020-05-04  26230.000000  26024.470703  26024.470703  26024.470703   \n",
-       "2020-05-05  26166.019531  26230.000000  26024.470703  26024.470703   \n",
+       "2025-04-07  29106.519531  29106.519531  29106.519531  29106.519531   \n",
+       "2025-04-08  29215.210938  29106.519531  29106.519531  29106.519531   \n",
+       "2025-04-09  29443.519531  29215.210938  29106.519531  29106.519531   \n",
+       "2025-04-10  29178.759766  29443.519531  29215.210938  29106.519531   \n",
+       "2025-04-11  29775.689453  29178.759766  29443.519531  29215.210938   \n",
        "\n",
        "                   lag_4         lag_5         lag_6         lag_7  \\\n",
        "Date                                                                 \n",
-       "2020-05-01  26085.720703  26034.900391  26034.900391  26034.900391   \n",
-       "2020-05-02  25993.859375  26085.720703  26034.900391  26034.900391   \n",
-       "2020-05-03  26024.470703  25993.859375  26085.720703  26034.900391   \n",
-       "2020-05-04  26024.470703  26024.470703  25993.859375  26085.720703   \n",
-       "2020-05-05  26024.470703  26024.470703  26024.470703  25993.859375   \n",
+       "2025-04-07  29245.750000  28437.330078  28516.390625  28459.009766   \n",
+       "2025-04-08  29106.519531  29245.750000  28437.330078  28516.390625   \n",
+       "2025-04-09  29106.519531  29106.519531  29245.750000  28437.330078   \n",
+       "2025-04-10  29106.519531  29106.519531  29106.519531  29245.750000   \n",
+       "2025-04-11  29106.519531  29106.519531  29106.519531  29106.519531   \n",
        "\n",
        "                   lag_8         lag_9  ...        lag_21        lag_22  \\\n",
        "Date                                    ...                               \n",
-       "2020-05-01  26054.089844  26092.029297  ...  26261.199219  26147.939453   \n",
-       "2020-05-02  26034.900391  26054.089844  ...  26261.199219  26261.199219   \n",
-       "2020-05-03  26034.900391  26034.900391  ...  26261.199219  26261.199219   \n",
-       "2020-05-04  26034.900391  26034.900391  ...  26238.789062  26261.199219   \n",
-       "2020-05-05  26085.720703  26034.900391  ...  26253.960938  26238.789062   \n",
+       "2025-04-07  28362.949219  28362.949219  ...  28560.130859  28438.750000   \n",
+       "2025-04-08  28459.009766  28362.949219  ...  28730.009766  28560.130859   \n",
+       "2025-04-09  28516.390625  28459.009766  ...  28707.859375  28730.009766   \n",
+       "2025-04-10  28437.330078  28516.390625  ...  28663.919922  28707.859375   \n",
+       "2025-04-11  29245.750000  28437.330078  ...  28481.259766  28663.919922   \n",
        "\n",
        "                  lag_23        lag_24        lag_25        lag_26  \\\n",
        "Date                                                                 \n",
-       "2020-05-01  26190.960938  26121.769531  26018.949219  25936.230469   \n",
-       "2020-05-02  26147.939453  26190.960938  26121.769531  26018.949219   \n",
-       "2020-05-03  26261.199219  26147.939453  26190.960938  26121.769531   \n",
-       "2020-05-04  26261.199219  26261.199219  26147.939453  26190.960938   \n",
-       "2020-05-05  26261.199219  26261.199219  26261.199219  26147.939453   \n",
+       "2025-04-07  28438.750000  28438.750000  28507.570312  28509.990234   \n",
+       "2025-04-08  28438.750000  28438.750000  28438.750000  28507.570312   \n",
+       "2025-04-09  28560.130859  28438.750000  28438.750000  28438.750000   \n",
+       "2025-04-10  28730.009766  28560.130859  28438.750000  28438.750000   \n",
+       "2025-04-11  28707.859375  28730.009766  28560.130859  28438.750000   \n",
        "\n",
        "                  lag_27        lag_28        lag_29        lag_30  \n",
        "Date                                                                \n",
-       "2020-05-01  25936.230469  25936.230469  26506.550781  26506.550781  \n",
-       "2020-05-02  25936.230469  25936.230469  25936.230469  26506.550781  \n",
-       "2020-05-03  26018.949219  25936.230469  25936.230469  25936.230469  \n",
-       "2020-05-04  26121.769531  26018.949219  25936.230469  25936.230469  \n",
-       "2020-05-05  26190.960938  26121.769531  26018.949219  25936.230469  \n",
+       "2025-04-07  28534.269531  28427.619141  28468.929688  28468.929688  \n",
+       "2025-04-08  28509.990234  28534.269531  28427.619141  28468.929688  \n",
+       "2025-04-09  28507.570312  28509.990234  28534.269531  28427.619141  \n",
+       "2025-04-10  28438.750000  28507.570312  28509.990234  28534.269531  \n",
+       "2025-04-11  28438.750000  28438.750000  28507.570312  28509.990234  \n",
        "\n",
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\DELL\\Downloads\\eur-vnd-exchange-rate\\data\\processed\\EUR_VND_Exchange_Rate.csv\")\n",
+    "df = pd.read_csv(\"../data/processed/EUR_VND_Exchange_Rate.csv\", parse_dates=[\"Date\"])\n",
     "df[\"Date\"] = pd.to_datetime(df[\"Date\"])\n",
     "timestamps = df[\"Date\"].values   \n",
     "df = df.set_index('Date')\n",
@@ -294,7 +294,7 @@
     "X = df.drop(columns=['Sell']).values\n",
     "y = df['Sell'].values\n",
     "\n",
-    "df.head()"
+    "df.tail()"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,13 +378,13 @@
     }
    ],
    "source": [
-    "model_path = r\"C:\\Users\\DELL\\Downloads\\eur-vnd-exchange-rate\\models\\RandomForest\\best_rf_prices.pkl\"\n",
+    "model_path = r\"D:\\eur-vnd-exchange-rate\\models\\RandomForest\\best_rf_prices.pkl\"\n",
     "best_model = train_rf(X_train, y_train, model_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
