--- a/notebooks/lstm.ipynb
+++ b/notebooks/lstm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "2025-04-11  29775.69"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,18 +316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step\n",
-      "MAE: 84.82551574707031\n",
-      "MSE: 16371.5595703125\n",
-      "RMSE: 127.9513931274414\n",
-      "MAPE: 0.30369220275702324%\n"
+      "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step\n",
+      "Đánh giá mô hình LSTM\n",
+      "MAE: 84.8255\n",
+      "MSE: 16371.5596\n",
+      "RMSE: 127.9514\n",
+      "MAPE: 0.3037%\n"
      ]
     }
    ],
@@ -345,10 +346,11 @@
     "rmse = np.sqrt(mse)\n",
     "mape = mean_absolute_percentage_error(y_test_actual, y_pred_actual) * 100\n",
     "\n",
-    "print(f\"MAE: {mae}\")\n",
-    "print(f\"MSE: {mse}\")\n",
-    "print(f\"RMSE: {rmse}\")\n",
-    "print(f\"MAPE: {mape}%\")"
+    "print(\"Đánh giá mô hình LSTM\")\n",
+    "print(f\"MAE: {mae:.4f}\")\n",
+    "print(f\"MSE: {mse:.4f}\")\n",
+    "print(f\"RMSE: {rmse:.4f}\")\n",
+    "print(f\"MAPE: {mape:.4f}%\")"
    ]
   },
   {
