--- a/notebooks/xgboost.ipynb
+++ b/notebooks/xgboost.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b4907b74",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ba0c0403",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "2025-04-11  29775.689453"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "25fc3fc2",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f01676b2",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6835e99f",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "8ef5565a",
    "metadata": {},
    "outputs": [],
@@ -228,31 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "75d8eeae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_xgb_model(best_hp):\n",
-    "    \"\"\"\n",
-    "    Xây dựng mô hình XGBoost từ tham số tối ưu\n",
-    "    \"\"\"\n",
-    "    model = xgb.XGBRegressor(\n",
-    "        n_estimators=best_hp.n_estimators,\n",
-    "        max_depth=best_hp.max_depth,\n",
-    "        learning_rate=best_hp.learning_rate,\n",
-    "        subsample=best_hp.subsample,\n",
-    "        colsample_bytree=best_hp.colsample_bytree,\n",
-    "        reg_alpha=best_hp.reg_alpha,\n",
-    "        reg_lambda=best_hp.reg_lambda,\n",
-    "        random_state=42\n",
-    "    )\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d3ff029f",
    "metadata": {},
    "outputs": [
@@ -308,7 +284,7 @@
        " 'verbosity': None}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "30121c17",
    "metadata": {},
    "outputs": [
@@ -337,11 +313,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Đánh giá mô hình XGBoost\n",
       "MAE: 79.1467\n",
       "MSE: 15527.2344\n",
       "RMSE: 124.6083\n",
-      "R^2: 0.9481\n",
-      "MAPE: 0.0028 (0.28%)\n"
+      "MAPE: 0.2824%\n"
      ]
     }
    ],
@@ -351,9 +327,13 @@
     "mse = mean_squared_error(y_test, y_pred_test)\n",
     "rmse = np.sqrt(mse)\n",
     "r2 = r2_score(y_test, y_pred_test)\n",
-    "mape = mean_absolute_percentage_error(y_test, y_pred_test)\n",
+    "mape = mean_absolute_percentage_error(y_test, y_pred_test) * 100\n",
     "\n",
-    "print(f\"MAE: {mae:.4f}\\nMSE: {mse:.4f}\\nRMSE: {rmse:.4f}\\nR^2: {r2:.4f}\\nMAPE: {mape:.4f} ({mape * 100:.2f}%)\")\n"
+    "print(\"Đánh giá mô hình XGBoost\")\n",
+    "print(f\"MAE: {mae:.4f}\")\n",
+    "print(f\"MSE: {mse:.4f}\")\n",
+    "print(f\"RMSE: {rmse:.4f}\")\n",
+    "print(f\"MAPE: {mape:.4f}%\")"
    ]
   },
   {
@@ -366,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e5d3a429",
    "metadata": {},
    "outputs": [
@@ -402,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "23152d43",
    "metadata": {},
    "outputs": [
